# vigilo

./: .gitignore  .mcp.json  Cargo.toml  LICENSE  Makefile  README.md  build.rs  install.sh
.cargo/: config.toml
.github/workflows/: release.yml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/api/: client.ts
dashboard/src/components/: CrossDimensionalPanel.tsx  LiveFeed.tsx  SessionSidebar.tsx  TimeSeriesPanel.tsx  TokenBreakdown.tsx  TopBar.tsx
dashboard/src/hooks/: useApi.ts  useResize.ts  useSSE.ts
docs/: architecture.md  commands.md  configuration.md  dashboard.tape  demo.tape  ledger-format.md  manual-setup.md
scripts/: release.sh
src/: cli.rs  crypto.rs  cursor_usage.rs  doctor.rs  git.rs  hook.rs  hook_helpers.rs  ledger.rs  main.rs  models.rs  server.rs  setup.rs  view.rs
src/cursor/: api.rs  cache.rs  credentials.rs  display.rs  mod.rs  platform.rs
src/dashboard/: handlers.rs  mod.rs  static_files.rs  types.rs
src/server/: execute.rs  mod.rs  schema.rs  tools.rs
src/view/: counts.rs  data.rs  fmt.rs  mod.rs  search.rs  session.rs  stats.rs
tests/: ledger_smoke.rs
