[package]
name = "vigilo"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "vigilo"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "io-std", "sync", "fs", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
regex = "1"
similar = { version = "2", features = ["text"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }

[dev-dependencies]
tempfile = "3"
