[package]
name = "vigilo"
version = "0.1.23"
edition = "2021"
license = "MIT"

[[bin]]
name = "vigilo"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "io-std", "sync", "fs", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
regex = "1"
similar = { version = "2", features = ["text"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
atty = "0.2"
fs2 = "0.4.3"
notify = "7"
libc = "0.2"
zeroize = { version = "1", features = ["derive"] }
dirs = "6"
axum = { version = "0.8", features = ["json"], optional = true }
tokio-stream = { version = "0.1", optional = true }
async-stream = { version = "0.3", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
include_dir = { version = "0.7", optional = true }
mime_guess = { version = "2", optional = true }

[features]
default = ["dashboard"]
dashboard = ["dep:axum", "dep:tower-http", "dep:include_dir", "dep:mime_guess", "dep:tokio-stream", "dep:async-stream"]

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
